--- a/diagnosis.html
+++ b/diagnosis.html
@@ -143,7 +143,7 @@
                             <div class="col">
                                 <div class="form-group mt-4">
                                     <label for="name" class="form-label">Category</label>
-                                    <select class="form-select" aria-label="designation" id="designation">
+                                    <select class="form-select width-90" aria-label="designation" id="designation">
                                         <option selected>Open this select menu</option>
                                         <option value="1">Xray</option>
                                         <option value="2">ECG</option>
