--- a/recepDashboard.html
+++ b/recepDashboard.html
@@ -49,7 +49,7 @@
                                 <div>
                                     <div class="d-flex align-items-center pe-4">
                                         <div class="profile-mask">
-                                            <img src="./assets/Img/Profile.jpg" alt="profile" class="img-fluid profile-picture d-inline-block">
+                                            <img src="./assets/Img/profile-2.jpg" alt="profile" class="img-fluid profile-picture d-inline-block">
                                         </div>
                                         <div class="profile-details ms-2">
                                             <h6 class="fw-bolder">Alina Mary</h6>
@@ -65,7 +65,7 @@
                 <div class="row ms-3 mt-3 me-3">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2 class="fw-900">Dashboard</h2>
-                        <a href="" class="btn btn-custom-primary text-white"><img src="./assets/Icon/Plus.svg" alt="addicon" class="img-fluid me-2">Add Patient</a>
+                        <button class="btn btn-custom-primary text-white" data-bs-toggle="modal" data-bs-target="#newpatientmodal"><img src="./assets/Icon/Plus.svg" class="img-fluid me-2">Add Patient</button>
                     </div>
                     <div class="col-md-4 mt-3">
                         <div class="card-body bg-white dashboard-card py-4">
@@ -259,6 +259,169 @@
                         </nav>
                         <a href="allpatients.html" class="form-link">View All</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade bring-top" id="newpatientmodal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content border-0 medium-shadow bg-white rounded-3 p-4">
+                <div class="modal-body">
+                    <div class="d-flex justify-content-between">
+                        <h5 class="modal-title fw-700" id="staticBackdropLabel">Add New Patient</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-md-6">
+                            <label for="fname" class="form-label">Firstname</label>
+                            <input type="text" class="form-control" id="fname">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="lname" class="form-label">Lastname</label>
+                            <input type="text" class="form-control" id="lname">
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col-md-6">
+                            <label for="DOB" class="form-label">Date of Birth</label>
+                            <input type="date" class="form-control" id="DOB">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="gender" class="form-label">Gender <br></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="gender" id="male">
+                                <label for="male" class="form-check-label">Male</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="gender" id="female">
+                                <label for="female" class="form-check-label">Female</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="gender" id="others">
+                                <label for="others" class="form-check-label">Others</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="marital" class="form-label">Marital Status<br></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="marital" id="single">
+                                <label for="single" class="form-check-label">Single</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="marital" id="married">
+                                <label for="married" class="form-check-label">Married</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="marital" id="Divorced">
+                                <label for="Divorced" class="form-check-label">Divorced</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col-md-6">
+                            <label for="age" class="form-label">Age</label>
+                            <input type="number" class="form-control" id="age">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="mobileno" class="form-label">Mobile Number</label>
+                            <input type="tel" class="form-control" id="mobileno">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer bmt-2">
+                    <button type="button" class="btn btn-custom-danger" data-bs-dismiss="modal">Cancel</button>
+                    <a href="#" class="btn btn-custom-primary" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#emergencycontact">Next</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Emergency Contact Modal -->
+    <div class="modal fade bring-top" id="emergencycontact" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content border-0 medium-shadow bg-white rounded-3 p-4">
+                <div class="modal-body">
+                    <div class="d-flex justify-content-between">
+                        <h5 class="modal-title fw-700" id="staticBackdropLabel">Emergency Contact</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col">
+                            <label for="fullname" class="form-label">Full Name</label>
+                            <input type="text" class="form-control" id="fullname">
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col-md-6">
+                            <label for="relationship" class="form-label">Relationship</label>
+                            <input type="text" class="form-control" id="relationship">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="mobileno" class="form-label">Mobile Number</label>
+                            <input type="tel" class="form-control" id="mobileno">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer bmt-2">
+                    <button type="button" class="btn btn-custom-danger" data-bs-dismiss="modal">Cancel</button>
+                    <a href="#" class="btn btn-custom-primary" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#referraltype">Next</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Referral Type Modal -->
+    <div class="modal fade bring-top" id="referraltype" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content border-0 medium-shadow bg-white rounded-3 p-4">
+                <div class="modal-body">
+                    <div class="d-flex justify-content-between">
+                        <h5 class="modal-title fw-700" id="staticBackdropLabel">Referral Type</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="name">
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col">
+                            <label for="address" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="address">
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="marital" class="form-label">Institution Type<br></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="institution" id="private">
+                                <label for="private" class="form-check-label">Private</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="institution" id="public">
+                                <label for="public" class="form-check-label">Public</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer bmt-2">
+                    <button type="button" class="btn btn-custom-danger" data-bs-dismiss="modal">Cancel</button>
+                    <a href="#" class="btn btn-custom-primary">Submit</a>
                 </div>
             </div>
         </div>
