(new feature) Staff info for admin details

--- a/recepDashboard.html
+++ b/recepDashboard.html
@@ -264,6 +264,8 @@
         </div>
     </div>
 
+
+    <!-- Add new pateint Modal -->
     <div class="modal fade bring-top" id="newpatientmodal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content border-0 medium-shadow bg-white rounded-3 p-4">
