(new Feature) Worked on the receptionist patient info and staff settings

--- a/designation.html
+++ b/designation.html
@@ -75,18 +75,41 @@
                     <table class="table mt-4 mx-2 medium-shadow">
                         <thead class="bg-light-gray">
                             <tr>
-                                <th><span class="me-2 ms-5">Name</span><span class="mx-5">Role</span><span class="mx-5"><a href="#" class="btn btn-outline-custom-danger"><img src="./assets/Icon/Delete.svg" alt="delete" class="img-fluid me-2"> Delete</a></span></th>
+                                <th>Name</th>
+                                <th>Role</th>
+                                <th></th>
+                                <th>
+                                    <a href="" class="btn btn-outline-custom-danger"><img src="./assets/Icon/Delete.svg" alt="delete" class="img-fluid me-2">Delete All</a>
+                                </th>
                             </tr>
                         </thead>
                         <tbody class="bg-white">
                             <tr>
-                                <td class="p-5">
-                                    <div class="d-flex flex-column justify-content-center align-items-center p-5">
-                                        <img src="./assets/Icon/Designation-illustration.svg" alt="empty" class="d-inline-block text-center empty-illustration">
-                                        <p class=" text-center text-dark-gray mt-3">Sorry, you have no Designation <br> at the moment</p>
-                                        <button class="btn btn-custom-primary m-2" data-bs-toggle="modal" data-bs-target="#adddesignation">Add Designation</button>
-                                    </div>
+                                <td>Blood Test</td>
+                                <td>Take patient Blood</td>
+                                <td>
+                                    <a href="#" class="btn btn-outline-custom-primary me-2"><img src="./assets/Icon/colored-edit.svg" alt="edit" class="img-fluid">Edit</a>
+                                    <a href="#" class="btn btn-outline-custom-danger"><img src="./assets/Icon/Delete.svg" alt="delete" class="img-fluid me-1">Delete</a>
                                 </td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>X-ray</td>
+                                <td>work on the xray for patient</td>
+                                <td>
+                                    <a href="#" class="btn btn-outline-custom-primary me-2"><img src="./assets/Icon/colored-edit.svg" alt="edit" class="img-fluid">Edit</a>
+                                    <a href="#" class="btn btn-outline-custom-danger"><img src="./assets/Icon/Delete.svg" alt="delete" class="img-fluid me-1">Delete</a>
+                                </td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>ECG</td>
+                                <td>work on the ECG scan for Patients</td>
+                                <td>
+                                    <a href="#" class="btn btn-outline-custom-primary me-2"><img src="./assets/Icon/colored-edit.svg" alt="edit" class="img-fluid">Edit</a>
+                                    <a href="#" class="btn btn-outline-custom-danger"><img src="./assets/Icon/Delete.svg" alt="delete" class="img-fluid me-1">Delete</a>
+                                </td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
