(edit changes) connect the patient profile link together

--- a/main-dashboard.html
+++ b/main-dashboard.html
@@ -47,7 +47,7 @@
                         <div class="details">
                             <div class="d-flex align-items-center">
                                 <div>
-                                    <img src="./assets/Icon/notification-icon.svg" alt="notification-icon" class="img-fluid notification-icon d-inline-block me-4">
+                                    <a href="./notification.html"><img src="./assets/Icon/notification-icon.svg" alt="notification-icon" class="img-fluid notification-icon d-inline-block me-4"></a>
                                 </div>
                                 <div>
                                     <div class="d-flex align-items-center pe-4">
