--- a/rePatientprofile.html
+++ b/rePatientprofile.html
@@ -65,7 +65,7 @@
                 <div class="row ms-3 mt-3 me-3">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2 class="fw-900">Patient Profile</h2>
-                        <button class="btn btn-custom-primary text-white" data-bs-toggle="modal" data-bs-target="#newpatientmodal">Create New Appointments</button>
+                        <a href="./checkout.html" class="btn btn-custom-primary text-white">Create New Appointments</a>
                     </div>
                     <div class="col-md-4 mt-4">
                         <div class="card-body bg-white d-grid justify-content-center rounded-3 medium-shadow py-5">
