--- a/repatientsample.html
+++ b/repatientsample.html
@@ -23,13 +23,13 @@
                 </div>
                 <div class="side-bar">
                     <div class="d-flex flex-column justify-content-start align-items-start">
-                        <a href="main-dashboard.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Category-icon.svg" alt="category" class="img-fluid me-3 ">Dashboard</a>
-                        <a href="patientprofile.html" class="side-link-active side-link py-3 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Patient Profile.svg" alt="patient" class="img-fluid me-3 ">Patient Profile</a>
-                        <a href="patientinfo.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/2 User-icon.svg" alt="category" class="img-fluid me-3 ">Patient Info</a>
-                        <a href="diagnosis.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Paper.svg" alt="category" class="img-fluid me-3 ">Diagnosis</a>
+                        <a href="recepDashboard.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Category-icon.svg" alt="category" class="img-fluid me-3 ">Dashboard</a>
+                        <a href="rePatientprofile.html" class="side-link side-link-active py-3 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Patient Profile.svg" alt="patient" class="img-fluid me-3 ">Patient Profile</a>
+                        <a href="receppatientinfo.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/2 User-icon.svg" alt="category" class="img-fluid me-3 ">Patient Info</a>
+                        <a href="recepdiagnosis.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Paper.svg" alt="category" class="img-fluid me-3 ">Diagnosis</a>
                         <a href="calendar.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Calendar-icon.svg" alt="category" class="img-fluid me-3 ">Calendar</a>
                         <hr class="mt-5 hr-custom mb-2">
-                        <a href="settings.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Setting-icon.svg" alt="category" class="img-fluid me-3 ">Settings</a>
+                        <a href="staffsettings.html" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Setting-icon.svg" alt="category" class="img-fluid me-3 ">Settings</a>
                         <a href="#" class="side-link py-3 pe-4 text-white text-decoration-none fw-bolder d-inline-block text-center"><img src="./assets/Icon/Logout-icon.svg" alt="category" class="img-fluid me-3 ">Log Out</a>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                         <div class="details">
                             <div class="d-flex align-items-center">
                                 <div>
-                                    <img src="./assets/Icon/notification-icon.svg" alt="notification-icon" class="img-fluid notification-icon d-inline-block me-4">
+                                    <a href="./notification.html"><img src="./assets/Icon/notification-icon.svg" alt="notification-icon" class="img-fluid notification-icon d-inline-block me-4"></a>
                                 </div>
                                 <div>
                                     <div class="d-flex align-items-center pe-4">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="modal-footer bmt-2">
                     <button type="button" class="btn btn-custom-danger" data-bs-dismiss="modal">Cancel</button>
-                    <a href="#" class="btn btn-custom-primary">Add Sample</a>
+                    <a href="repatientresult.html" class="btn btn-custom-primary">Add Sample</a>
                 </div>
             </div>
         </div>
