(fixed) add the service provider to the login & Create account

--- a/Createaccount.html
+++ b/Createaccount.html
@@ -19,12 +19,16 @@
             <div class="col-md-6 overflow-hidden h-100">
                 <div class="hospital-bg">
                     <img src="./assets/Icon/Design-Right.svg" alt="Design" class="img-fluid bg-cover-img design-right">
+                    <div class="side-text">
+                        <h2 class="fw-900 text-white">Welcome to Mediplus Dashboard</h2>
+                        <p class="mt-1">powered by <img src="./assets/Icon/Dervac Logo.svg" alt="dervac logo" class="img-fluid dervac"></p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-3 mt-login mb-5 pd-5 ms-5">
                 <div>
                     <h3 class="text-title">Create Account</h3>
-                    <p>Welcome to M.D.M,S. Let’s get started.</p>
+                    <p>Welcome to M.D.M.S. Let’s get started.</p>
                 </div>
                 <div class="form-group mt-5">
                     <div class="mb-4">
@@ -71,10 +75,10 @@
                     <a href="#" class="btn p-2 btn-custom-primary">
                             Create Account
                         </a>
-                    <p class="text-center mt-3">Already Have an Account. <a href="login.html" class="form-link ms-2">Create</a></p>
+                    <p class="text-center mt-3">Already Have an Account. <a href="login.html" class="form-link ms-2">Login</a></p>
                 </div>
 
-                <p class="text-muted  mt-5 text-end">©Mediplus 2021</p>
+                <p class="text-muted  mt-5 text-end">©M.D.M.S 2021</p>
 
             </div>
         </div>
