--- a/login.html
+++ b/login.html
@@ -16,11 +16,17 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6 hospital-bg overflow-hidden">
-                <img src="./assets/Icon/Design-Right.svg" alt="Design" class="img-fluid bg-cover-img design-right">
+            <div class="col-md-6 overflow-hidden h-100">
+                <div class="hospital-bg">
+                    <img src="./assets/Icon/Design-Right.svg" alt="Design" class="img-fluid bg-cover-img design-right">
+                    <div class="side-text">
+                        <h2 class="fw-900 text-white">Welcome to M.D.M.S Dashboard</h2>
+                        <p class="mt-1">powered by <img src="./assets/Icon/Dervac Logo.svg" alt="dervac logo" class="img-fluid dervac"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4 my-auto ms-5">
-                <div>
+            <div class="col-md-4 my-auto ms-5 mt-5">
+                <div class="mt-5">
                     <h3 class="text-title">Login</h3>
                     <p>Get Access to your account</p>
                 </div>
@@ -38,7 +44,7 @@
                         <a href="#" class="btn p-2 btn-custom-primary">
                             Login
                         </a>
-                        <p class="text-center mt-3">Don’t Have an Account.<a href="#" class="form-link">Create</a></p>
+                        <p class="text-center mt-3">Don’t Have an Account.<a href="Createaccount.html" class="form-link">Create Account</a></p>
                     </div>
                 </div>
             </div>
